# beancount-bot

./: .env.example  .gitignore  CLAUDE.md  ITERATION-2026-03-30-llm-prompt-enrichment-and-rule-feedback-optimizer.md  ITERATION-2026-03-30-ocr-bill-import-and-classification.md  Makefile  TODO.md  docker-compose.yml
.planning/: PROJECT.md  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_transaction_external_id.py  003_add_budget_plans.py  004_add_rule_suggestions.py  005_add_runtime_settings_and_import_progress.py  006_add_transaction_cross_source_dedupe_key.py  007_add_import_stages_and_summaries.py  008_add_duplicate_review_foundations.py
backend/app/: main.py
backend/app/api/v1/: bills.py  budgets.py  categories.py  query.py  reports.py  settings.py  transactions.py
backend/app/application/: budget_service.py  import_service.py  query_service.py  report_service.py  runtime_settings_service.py
backend/app/core/: config.py  event_bus.py  exceptions.py  logging.py  timezone.py
backend/app/domain/beancount/: account_resolver.py  engine.py
backend/app/domain/classification/: batch_runner.py  category_tree.py  pipeline.py  rule_engine.py
backend/skills/: README.md
backend/skills/cross-channel-dedup/: SKILL.md  input_schema.py  output_schema.py
backend/tests/: conftest.py  test_bill_parsers.py  test_category_suggestions.py  test_import_detail.py  test_skill_loader.py  test_skill_scaffold.py  test_transaction_deduplication.py
(+77 files in other folders)
